@startuml
'https://plantuml.com/sequence-diagram

skinparam object{
    BackgroundColor Cyan
}

skinparam class{
    BackgroundColor LightGreen
}

class BaseMiniCooper <<(C,Plum)>> {
    model_name TEXT
    generation INT
    model_type TEXT
    color TEXT
    price INT
    km_driven INT
    max_range INT
    weight INT
    fuel_type TEXT
    geartype TEXT
    yearly_tax INT
    base64_images TEXT[]
}

class account <<(C,Plum)>>{
    name TEXT
    password TEXT
    phone INT
    email TEXT
    city TEXT
    address TEXT
}

class EvMiniCooper <<(C,Plum)>>{
    base_cooper BaseMiniCooper
    charge_capacity INT
    km_pr_kwh FLOAT
}

class FossilMiniCooper <<(C,Plum)>>{
    base_cooper BaseMiniCooper
    tank_capacity INT
    km_pr_liter FLOAT
    gears INT
}

class HybridMiniCooper <<(C,Plum)>>{
    base_cooper BaseMiniCooper
    fuel_type1 TEXT
    fuel_type2 TEXT
    tank_capacity INT
    charge_capacity INT
    km_pr_liter FLOAT
    km_pr_kwh FLOAT
    gears INT
}

class FullMiniCooper <<(C,Plum)>>{
    FossilMiniCooper?
    EvMiniCooper?
    HybridMiniCooper?
}

object users {
    id SERIAL PRIMARY KEY
    a_user account
}


object Cars {
    id SERIAL PRIMARY KEY
    car FullMiniCooper
    account_id INT
    CONSTRAINT FK_account_id FOREIGN KEY (account_id) REFERENCES users (id)
}

FullMiniCooper --|> FossilMiniCooper
FullMiniCooper --|> EvMiniCooper
FullMiniCooper --|> HybridMiniCooper

users::id -> Cars::id

FullMiniCooper --> Cars

FossilMiniCooper --|> BaseMiniCooper 
EvMiniCooper --|> BaseMiniCooper
HybridMiniCooper --|> BaseMiniCooper

account -> users::a_user

@enduml

@startuml
skinparameters
@enduml